# Nanodet_openvino_quant_deploy

./: .gitignore  CMakeLists.txt  Nanodet.cpp  Nanodet.h  README.md  add_pre_post.py  main.cpp
quant/: nncf_ptq.py  ppq_ptq.py
tools/: add_preprocess.py  quant.py  quant_nncf.py
workspace/: nanodet-1.5x-320-fp32.xml  nanodet-1.5x-320-int8.xml  nanodet-1.5x-416-fp32.xml  nanodet-1.5x-416-int8.xml  nanodet-320-fp32.xml  nanodet-416-fp32.xml  nanodet-416-int8.xml  nanodet-full-1.5x-320-int8-ppq.xml  nanodet-full-1.5x-416-int8-ppq.xml  nanodet_int8.xml
